# discord-waifu

./: .env.example  .gitignore  README.md  addDataSimple.py  chromaManage.py  config.json  exampleMessages.json  helpers.py  localTest.py  main.py  persona.py  pyproject.toml  respond.py  syncChroma.py
tech/__pycache__/: context.json
